welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: missing parameter type
		while (x => 1){
                       ^